--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-REACT_APP_IMAGE_URL = http://localhost:5000/image
+REACT_APP_IMAGE_URL = https://portfolio-server-4csu.onrender.com/image
+
+It Is A Full Stack MERN Project.
+In Frontend I Used Reat.Js, Tailwind.Css, Redux, Etc.
+In Backend I Used Node.Js, Express.Js, Mongodb, Mongoose, Etc.
+In This Webapp We Can Chat, Make Friends, Follow Them, View Their Post And At The Same Time Like And Comment On It.
+It Is Totally Safe And Secure In Terms Of Privacy, Only The Authenticated Users Are Allowed And No Personal Details Are Leaked.
