--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -16,8 +15,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "framer": "^2.2.1",
+    "js-cookie": "^3.0.1",
     "motion": "^10.14.3",
     "node-sass": "^7.0.3",
+    "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
